--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 # API Base URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Unsplash API Keys
+NEXT_PUBLIC_UNSPLASH_ACCESS_KEY=RfZSbn_rdvEPrnhslq8HRwmCwyayZg3DBo_LDcXXaTM
+
+# Unsplash API URL
+NEXT_PUBLIC_UNSPLASH_API_URL=https://api.unsplash.com
